objects/Bill_Entity_Number__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Entity_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bill Entity Numbers</relationshipLabel>
        <relationshipName>Bill_Entity_Numbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Bill Entity Number</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Entity Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Entity Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>